sandbox/output
PatientTest.java:14: error: constructor Patient in class Patient cannot be applied to given types;
        Patient patient = new Patient(codeine, null);
                          ^
  required: List<Medicine>
  found: Medicine,<null>
  reason: actual and formal argument lists differ in length
PatientTest.java:30: error: constructor Patient in class Patient cannot be applied to given types;
        Patient patient = new Patient(codeine, prozac);
                          ^
  required: List<Medicine>
  found: Medicine,Medicine
  reason: actual and formal argument lists differ in length
PatientTest.java:46: error: constructor Patient in class Patient cannot be applied to given types;
        Patient patient = new Patient(codeine, prozac);
                          ^
  required: List<Medicine>
  found: Medicine,Medicine
  reason: actual and formal argument lists differ in length
3 errors
